--- a/src/locales/en/professionals.json
+++ b/src/locales/en/professionals.json
@@ -1,8 +1,22 @@
 {
   "title": "We have a team of professionals committed to providing <span>legal excellence advice</span>, focused on accompanying our clients in each key decision.",
-  "team": {
-    "experience": "years of experience",
-    "specialization": "Specialization",
-    "education": "Academic background"
+  "subtitle": "Professionals",
+  "professional1": {
+    "title": "Federico Busso",
+    "subtitle": "Socio fundador - Abogado",
+    "subtitle2": " Derecho Societario y General",
+    "description": "Federico lidera el área de Derecho Corporativo de BF LAW. Brinda asesoramiento legal integral a empresas nacionales y extranjeras en cuestiones societarias, contractuales y de gobierno corporativo. Su experiencia abarca desde la constitución y seguimiento jurídico de sociedades hasta operaciones complejas de compraventa accionaria y reestructuración empresarial.<br/> Se destaca por su mirada analítica, su enfoque orientado a la prevención de conflictos y su capacidad para articular soluciones sólidas frente a contextos desafiantes."
+  },
+  "professional2": {
+    "title": "Erika Kurdziel",
+    "subtitle": "Socia fundadora - Abogada",
+    "subtitle2": "Derecho Societario y General",
+    "description": "Erika lidera la práctica de Derecho Societario y General de BF LAW. Cuenta con una amplia trayectoria asesorando a empresas nacionales e internacionales en conflictos societarios, compraventa de acciones, reestructuraciones y operaciones de mercado de capitales. Ha participado en procesos estratégicos clave para empresas líderes en diversos sectores.<br/> Su práctica se destaca por un enfoque técnico, estratégico y orientado a generar soluciones sostenibles."
+  },
+  "professional3": {
+    "title": "Diego Correa",
+    "subtitle": "Abogado Senior",
+    "subtitle2": "Derecho Societario y General",
+    "description": "Diego lidera el área de Derecho Laboral y Litigios de BF LAW. Posee una sólida experiencia representando a empresas en conflictos laborales individuales y colectivos, así como en negociaciones sindicales y procedimientos administrativos ante organismos regulatorios. Ha intervenido en litigios complejos y estratégicos, tanto en sede judicial como arbitral, en defensa de los intereses de clientes de distintos sectores económicos. Su práctica se caracteriza por una visión preventiva del conflicto y una gestión eficiente del riesgo legal."
   }
 }
