--- a/src/locales/es/professionals.json
+++ b/src/locales/es/professionals.json
@@ -1,6 +1,6 @@
 {
-  "title": "We have a team of professionals committed to providing <span>legal excellence advice</span>, focused on accompanying our clients in each key decision.",
-  "subtitle": "Professionals",
+  "title": "Contamos con un equipo de profesionales comprometidos con brindarasesoramiento legal de excelencia,enfocado en acompañar a nuestros clientes en cada decisión clave.",
+  "subtitle": "Profesionales",
   "professional1": {
     "title": "Federico Busso",
     "subtitle": "Socio fundador - Abogado",
