--- a/src/locales/en/professionals.json
+++ b/src/locales/en/professionals.json
@@ -1,22 +1,22 @@
 {
-  "title": "We have a team of professionals committed to providing <span>legal excellence advice</span>, focused on accompanying our clients in each key decision.",
+  "title": "We have a team of professionals committed to providing legal excellence advice, focused on supporting our clients in each key decision.",
   "subtitle": "Professionals",
   "professional1": {
     "title": "Federico Busso",
-    "subtitle": "Socio fundador - Abogado",
-    "subtitle2": " Derecho Societario y General",
-    "description": "Federico lidera el área de Derecho Corporativo de BF LAW. Brinda asesoramiento legal integral a empresas nacionales y extranjeras en cuestiones societarias, contractuales y de gobierno corporativo. Su experiencia abarca desde la constitución y seguimiento jurídico de sociedades hasta operaciones complejas de compraventa accionaria y reestructuración empresarial.<br/> Se destaca por su mirada analítica, su enfoque orientado a la prevención de conflictos y su capacidad para articular soluciones sólidas frente a contextos desafiantes."
+    "subtitle": "Founding Partner - Lawyer",
+    "subtitle2": "Corporate and General Law",
+    "description": "Federico leads BF LAW’s Corporate Law area. He provides comprehensive legal advice to national and foreign companies on corporate, contractual, and corporate governance matters. His experience ranges from the incorporation and ongoing legal support of companies to complex share purchase transactions and corporate restructuring.<br/> He stands out for his analytical perspective, conflict-prevention approach, and ability to craft solid solutions in challenging contexts."
   },
   "professional2": {
     "title": "Erika Kurdziel",
-    "subtitle": "Socia fundadora - Abogada",
-    "subtitle2": "Derecho Societario y General",
-    "description": "Erika lidera la práctica de Derecho Societario y General de BF LAW. Cuenta con una amplia trayectoria asesorando a empresas nacionales e internacionales en conflictos societarios, compraventa de acciones, reestructuraciones y operaciones de mercado de capitales. Ha participado en procesos estratégicos clave para empresas líderes en diversos sectores.<br/> Su práctica se destaca por un enfoque técnico, estratégico y orientado a generar soluciones sostenibles."
+    "subtitle": "Founding Partner - Lawyer",
+    "subtitle2": "Corporate and General Law",
+    "description": "Erika leads BF LAW’s Corporate and General Law practice. She has extensive experience advising national and international companies on corporate disputes, share purchases, restructurings, and capital markets transactions. She has participated in key strategic processes for leading companies across various sectors.<br/> Her practice is distinguished by a technical, strategic approach aimed at generating sustainable solutions."
   },
   "professional3": {
     "title": "Diego Correa",
-    "subtitle": "Abogado Senior",
-    "subtitle2": "Derecho Societario y General",
-    "description": "Diego lidera el área de Derecho Laboral y Litigios de BF LAW. Posee una sólida experiencia representando a empresas en conflictos laborales individuales y colectivos, así como en negociaciones sindicales y procedimientos administrativos ante organismos regulatorios. Ha intervenido en litigios complejos y estratégicos, tanto en sede judicial como arbitral, en defensa de los intereses de clientes de distintos sectores económicos. Su práctica se caracteriza por una visión preventiva del conflicto y una gestión eficiente del riesgo legal."
+    "subtitle": "Senior Lawyer",
+    "subtitle2": "Corporate and General Law",
+    "description": "Diego leads BF LAW’s Labor Law and Litigation area. He has solid experience representing companies in both individual and collective labor disputes, as well as in union negotiations and administrative proceedings before regulatory bodies. He has been involved in complex and strategic litigation, both in court and in arbitration, defending the interests of clients from various economic sectors. His practice is characterized by a preventive approach to conflict and efficient management of legal risk."
   }
 }
