--- a/src/locales/en/contact.json
+++ b/src/locales/en/contact.json
@@ -2,17 +2,31 @@
   "title": "Contact",
   "subtitle": "We are here to help you",
   "form": {
+    "title": "Send us a message",
     "name": "Full name",
     "email": "Email address",
     "phone": "Phone",
     "subject": "Subject",
     "message": "Message",
-    "send": "Send message"
+    "send": "Send message",
+    "loading": "Sending...",
+    "name.required": "The name is required",
+    "email.required": "The email is required",
+    "email.pattern": "The email is not valid",
+    "title.required": "The subject is required",
+    "title.minLength": "The subject must have at least 5 characters",
+    "message.required": "The message is required",
+    "message.minLength": "The message must have at least 10 characters"
   },
   "info": {
+    "title": "Contact Information",
     "address": "Address",
-    "phone": "Phone",
-    "email": "Email",
+    "addressValue": "Av. Principal #123",
+    "addressValue2": "City, Country",
+    "phoneValue": "+1 (555) 123-4567",
+    "emailValue": "info@bflaw.com",
+    "hoursValue": "Monday - Friday: 9:00 AM - 6:00 PM",
+    "hoursValue2": "Saturday: 9:00 AM - 2:00 PM",
     "hours": "Business hours"
   },
   "success": "Message sent successfully",
