--- a/src/locales/es/contact.json
+++ b/src/locales/es/contact.json
@@ -2,17 +2,31 @@
   "title": "Contacto",
   "subtitle": "Estamos aquí para ayudarte",
   "form": {
+    "title": "Envíanos un Mensaje",
     "name": "Nombre completo",
     "email": "Correo electrónico",
     "phone": "Teléfono",
     "subject": "Asunto",
     "message": "Mensaje",
-    "send": "Enviar mensaje"
+    "send": "Enviar mensaje",
+    "loading": "Enviando...",
+    "name.required": "El nombre es obligatorio",
+    "email.required": "El email es obligatorio",
+    "email.pattern": "El email no es válido",
+    "title.required": "El asunto es obligatorio",
+    "title.minLength": "El asunto debe tener al menos 5 caracteres",
+    "message.required": "El mensaje es obligatorio",
+    "message.minLength": "El mensaje debe tener al menos 10 caracteres"
   },
   "info": {
+    "title": "Información de Contacto",
     "address": "Dirección",
-    "phone": "Teléfono",
-    "email": "Email",
+    "addressValue": "Av. Principal #123",
+    "addressValue2": "Ciudad, País",
+    "phoneValue": "+1 (555) 123-4567",
+    "emailValue": "info@bflaw.com",
+    "hoursValue": "Lunes - Viernes: 9:00 AM - 6:00 PM",
+    "hoursValue2": "Sábados: 9:00 AM - 2:00 PM",
     "hours": "Horarios de atención"
   },
   "success": "Mensaje enviado exitosamente",
