feat: implementado mejoras

--- a/src/locales/es/footer.json
+++ b/src/locales/es/footer.json
@@ -2,7 +2,7 @@
   "contact": {
     "title": "Contáctanos",
     "phone": "Número de contacto",
-    "phoneValue": "+0(850) 544 7514",
+    "phoneValue": "+54 11-23666101",
     "address": "Ubicados",
     "addressValue": "Edificio Paralelo 50 Norte\nAv. 12 de Octubre 7225, piso 3 of 322\n(1629) Pilar. Provincia de Buenos Aires",
     "addressLink": "Abrir en Google Maps",
