--- a/src/locales/en/professionals.json
+++ b/src/locales/en/professionals.json
@@ -5,18 +5,18 @@
     "title": "Federico Busso",
     "subtitle": "Founding Partner - Lawyer",
     "subtitle2": "Corporate and General Law",
-    "description": "Federico leads BF LAW’s Corporate Law area. He provides comprehensive legal advice to national and foreign companies on corporate, contractual, and corporate governance matters. His experience ranges from the incorporation and ongoing legal support of companies to complex share purchase transactions and corporate restructuring.<br/> He stands out for his analytical perspective, conflict-prevention approach, and ability to craft solid solutions in challenging contexts."
+    "description": "Federico leads BF LAW’s Corporate Law area. He provides comprehensive legal advice to national and foreign companies on corporate, contractual, and corporate governance matters. His experience ranges from the incorporation and ongoing legal support of companies to complex share purchase transactions and corporate restructuring.<br/> He stands out for his analytical perspective, conflict-prevention approach, and ability to craft solid solutions in challenging contexts. <br/> <br/> <label>Practice areas:</label> <br/> Corporate law, mergers and acquisitions, commercial contracts, corporate restructuring."
   },
   "professional2": {
     "title": "Erika Kurdziel",
     "subtitle": "Founding Partner - Lawyer",
     "subtitle2": "Corporate and General Law",
-    "description": "Erika leads BF LAW’s Corporate and General Law practice. She has extensive experience advising national and international companies on corporate disputes, share purchases, restructurings, and capital markets transactions. She has participated in key strategic processes for leading companies across various sectors.<br/> Her practice is distinguished by a technical, strategic approach aimed at generating sustainable solutions."
+    "description": "Erika leads BF LAW’s Corporate and General Law practice. She has extensive experience advising national and international companies on corporate disputes, share purchases, restructurings, and capital markets transactions. She has participated in key strategic processes for leading companies across various sectors.<br/> Her practice is distinguished by a technical, strategic approach aimed at generating sustainable solutions.<br/> <br/> <label>Practice areas:</label> <br/> Corporate law, mergers and acquisitions, capital markets, commercial contracts, corporate restructuring."
   },
   "professional3": {
     "title": "Diego Correa",
     "subtitle": "Senior Lawyer",
     "subtitle2": "Corporate and General Law",
-    "description": "Diego leads BF LAW’s Labor Law and Litigation area. He has solid experience representing companies in both individual and collective labor disputes, as well as in union negotiations and administrative proceedings before regulatory bodies. He has been involved in complex and strategic litigation, both in court and in arbitration, defending the interests of clients from various economic sectors. His practice is characterized by a preventive approach to conflict and efficient management of legal risk."
+    "description": "Diego leads BF LAW’s Labor Law and Litigation area. He has solid experience representing companies in both individual and collective labor disputes, as well as in union negotiations and administrative proceedings before regulatory bodies. He has been involved in complex and strategic litigation, both in court and in arbitration, defending the interests of clients from various economic sectors. His practice is characterized by a preventive approach to conflict and efficient management of legal risk.<br/> <br/> <label>Practice areas:</label> <br/> Labor law, individual and collective labor disputes, union conflicts, labor advice, dispute resolution."
   }
 }
