--- a/src/locales/es/professionals.json
+++ b/src/locales/es/professionals.json
@@ -5,18 +5,18 @@
     "title": "Federico Busso",
     "subtitle": "Socio fundador - Abogado",
     "subtitle2": " Derecho Societario y General",
-    "description": "Federico lidera el área de Derecho Corporativo de BF LAW. Brinda asesoramiento legal integral a empresas nacionales y extranjeras en cuestiones societarias, contractuales y de gobierno corporativo. Su experiencia abarca desde la constitución y seguimiento jurídico de sociedades hasta operaciones complejas de compraventa accionaria y reestructuración empresarial.<br/> Se destaca por su mirada analítica, su enfoque orientado a la prevención de conflictos y su capacidad para articular soluciones sólidas frente a contextos desafiantes."
+    "description": "Federico lidera el área de Derecho Corporativo de BF LAW. Brinda asesoramiento legal integral a empresas nacionales y extranjeras en cuestiones societarias, contractuales y de gobierno corporativo. Su experiencia abarca desde la constitución y seguimiento jurídico de sociedades hasta operaciones complejas de compraventa accionaria y reestructuración empresarial.<br/> Se destaca por su mirada analítica, su enfoque orientado a la prevención de conflictos y su capacidad para articular soluciones sólidas frente a contextos desafiantes.<br/> <br/> <label>Areas de práctica:</label> <br/> Derecho societario, fusiones y adquisiciones, contratos comerciales, reestructuración empresarial, gobierno corporativo."
   },
   "professional2": {
     "title": "Erika Kurdziel",
     "subtitle": "Socia fundadora - Abogada",
     "subtitle2": "Derecho Societario y General",
-    "description": "Erika lidera la práctica de Derecho Societario y General de BF LAW. Cuenta con una amplia trayectoria asesorando a empresas nacionales e internacionales en conflictos societarios, compraventa de acciones, reestructuraciones y operaciones de mercado de capitales. Ha participado en procesos estratégicos clave para empresas líderes en diversos sectores.<br/> Su práctica se destaca por un enfoque técnico, estratégico y orientado a generar soluciones sostenibles."
+    "description": "Erika lidera la práctica de Derecho Societario y General de BF LAW. Cuenta con una amplia trayectoria asesorando a empresas nacionales e internacionales en conflictos societarios, compraventa de acciones, reestructuraciones y operaciones de mercado de capitales. Ha participado en procesos estratégicos clave para empresas líderes en diversos sectores.<br/> Su práctica se destaca por un enfoque técnico, estratégico y orientado a generar soluciones sostenibles.<br/> <br/> <label>Areas de práctica:</label> <br/> Derecho societario, fusiones y adquisiciones, mercado de capitales, contratos comerciales, reestructuración empresarial."
   },
   "professional3": {
     "title": "Diego Correa",
     "subtitle": "Abogado Senior",
     "subtitle2": "Derecho Societario y General",
-    "description": "Diego lidera el área de Derecho Laboral y Litigios de BF LAW. Posee una sólida experiencia representando a empresas en conflictos laborales individuales y colectivos, así como en negociaciones sindicales y procedimientos administrativos ante organismos regulatorios. Ha intervenido en litigios complejos y estratégicos, tanto en sede judicial como arbitral, en defensa de los intereses de clientes de distintos sectores económicos. Su práctica se caracteriza por una visión preventiva del conflicto y una gestión eficiente del riesgo legal."
+    "description": "Diego lidera el área de Derecho Laboral y Litigios de BF LAW. Posee una sólida experiencia representando a empresas en conflictos laborales individuales y colectivos, así como en negociaciones sindicales y procedimientos administrativos ante organismos regulatorios. Ha intervenido en litigios complejos y estratégicos, tanto en sede judicial como arbitral, en defensa de los intereses de clientes de distintos sectores económicos. Su práctica se caracteriza por una visión preventiva del conflicto y una gestión eficiente del riesgo legal.<br/> <br/> <label>Areas de práctica:</label> <br/> Derecho laboral, litigios individuales y colectivos, conflictos sindicales, asesoramiento en relaciones laborales, resolución de controversias."
   }
 }
